mdapipkg/unpackaged/objects/App_Listing__c.object
<CustomObject>
    <fields>
        <fullName>App_by_Partner__c</fullName>
        <formula>LEFT(Short_Name__c&amp; &quot; by &quot; &amp; Partner__r.Name, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App by Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Desription__c</fullName>
        <label>Brief Desription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Catergory__c</fullName>
        <label>Catergory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>IT &amp;Admin</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Enterprise Resource Planning</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Editions__c</fullName>
        <label>Editions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
                <value>
                    <fullName>Force.com</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Description__c</fullName>
        <label>Full Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industries__c</fullName>
        <label>Industries</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Nonprofits</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Listing_Id__c</fullName>
        <label>Listing Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_URL__c</fullName>
        <label>Listing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>App Listings</relationshipLabel>
        <relationshipName>App_Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <formula>LEFT( Brief_Desription__c , 100)</formula>
        <label>Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <formula>if(Len(Name)&lt;50, Name,

LEFT( Name , find(&quot; &quot;,left(Name,50),40))&amp;&quot;...&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tagline__c</fullName>
        <label>Tagline</label>
        <type>TextArea</type>
    </fields>
    <label>App Listing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>App LIsting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>